<resources>
    <string name="app_name">
        Quiz
    </string>
    <string name="action_settings">Settings</string>

    <string name="quiz_tab_title">Quiz</string>
    <string name="add_tab_title">Add</string>
    <string name="preferences_tab_title">Preferences</string>
    <string name="quiz_answer_button">Go</string>
    <string name="overview_tab_title">People</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_answer">Name</string>

    <string name="image_download_url">https://picsum.photos/200/300/?random</string>
    <string name="add_person_here">Add person here</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="add_person">Add person</string>
    <string name="select_image">Select image</string>
    <string name="capture_photo">Capture photo</string>
    <string name="save">Save</string>
    <string name="preferences">Preferences</string>
    <string name="your_name">Your name</string>
    <string name="preference_file_name_key">io.roger.quiz.NAME_KEY</string>
</resources>