<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.roger.quiz.MainActivity">

    <item
        android:id="@+id/people"
        android:orderInCategory="1"
        android:title="@string/overview_tab_title"
        android:icon="@drawable/ic_baseline_storage_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/quiz"
        android:orderInCategory="2"
        android:title="@string/quiz_tab_title"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/preferences"
        android:orderInCategory="3"
        android:title="@string/preferences_tab_title"
        android:icon="@drawable/preferences"
        app:showAsAction="always" />

</menu>
