...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreText"
            tools:src="@tools:sample/backgrounds/scenic"
            tools:srcCompat="@drawable/ic_launcher_foreground" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/input_answer"
            android:inputType="textPersonName"
...
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/randomImageView"
            tools:text="Ola Nordmann" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quiz_answer_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
...
